-
Bug
-
Resolution: Done
-
P3: Somewhat important
-
5.5.1, 5.11.1
-
4f2e0117f9b842d9aa2a9bb04aabd9fb09774f1d
While doing some exercises with QFont class, my program crashed with the following message: "QFont::lastResortFont: Cannot find any reasonable font".
The name of the font was supposed to be written in a label (code sample attached as a printscreen).
I checked the docs and saw a notice asking to report the bug, if it occurred.
Attached are the list of fonts on my system and a printscreen showing my code and the application output.